# cendre

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example
backend/: Cargo.toml  Dockerfile  Rust-toolchain.toml
backend/src/: db.rs  lib.rs  main.rs  models.rs
backend/tests/: backend_e2e.rs  logging.rs  rate_limit.rs  redis_integration.rs
frontend/: Dockerfile  README.md  eslint.config.cjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: secret-flow.spec.ts
frontend/src/: App.test.tsx  App.tsx  CreateForm.test.tsx  CreateForm.tsx  ReadView.test.tsx  ReadView.tsx  index.css  main.tsx
frontend/src/lib/: crypto.test.ts  crypto.ts
